tests/fixtures/syntax/valid/string_literal_escaped_quote.repor
case "escaped quote is string content, not a terminator" {
  $ printf 'say "hi"'
  assert {
    stdout contains "say \"hi\""
  }
}
