tests/fixtures/syntax/invalid/stdout_contains_workspace_path_literal.repor
case "stdout contains expected text requires a text value, not a workspace path literal" {
  $ true
  assert {
    stdout contains <"expected.stdout">
  }
}
